TestRepo2/src/objects/Item_Brand__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Items and Brands</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Item Brands</relationshipLabel>
        <relationshipName>Item_Brands</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Brands</relationshipLabel>
        <relationshipName>Item_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Brand</label>
    <nameField>
        <displayFormat>ITB-{0000000000}</displayFormat>
        <label>Item Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>The associated brand must match the brand associated with the item&apos;s program, except when it&apos;s a portfolio brand or generic brand</description>
        <errorConditionFormula>Brand__c &lt;&gt; Item__r.Program__r.Brand__c &amp;&amp; NOT(Item__r.Program__r.Brand__r.Portfolio_Brand__c || ISPICKVAL(Item__r.Program__r.Brand__r.Brand_Type__c, &apos;Generic&apos;) )</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>The associated brand must match the brand associated with the item&apos;s program, except when it&apos;s a portfolio brand or generic brand</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Brand</fullName>
        <active>true</active>
        <description>If an Item Brand is marked as &quot;Primary&quot;, the related Brand cannot be generic.</description>
        <errorConditionFormula>(TEXT(Brand__r.Brand_Type__c) = &quot;Generic&quot;) &amp;&amp; (Primary__c = TRUE)</errorConditionFormula>
        <errorMessage>A primary Item Brand must be related to an individual brand</errorMessage>
    </validationRules>
</CustomObject>